resources/style.css
/* Univeral Styles */

body {
    margin: 0;
    font-family: Verdana, sans-serif;
    color: whitesmoke;
}

a {
    text-decoration: none;
    color: whitesmoke;
}

a:hover {
    color: #ef5260;
}

/* Header */

header {
    background-color: #663399;
    width: 100%;
    position: fixed;
    display: flex;
    height: 100px;
    z-index: 1;
    top: 0;
    align-items: center;
    justify-content: space-between;
    border-bottom: 3px solid whitesmoke;
}

header img {
    height: 95px;
    margin-left: 20px;
}

nav a {
    padding: 10px;
    font-weight: bold;
    font-size: 1.3em;
}

nav {
    margin-right: 40px;
}

.image-container {
    background-image: url(images/o-MALE-FRIENDS-facebook.jpeg);
    background-size: cover;
    height: 650px;
    width: 100%;
}

.big-heading {
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
    height: 110%;
    font-size: 1.5em;
    color: white;
}

.big-heading h1,
h4 {
    width: 100%;
    height: 5%;
    align-items: center;
    display: flex;
    justify-content: center;
    flex-direction: column;
    margin: 0;
    background-color: black;
    font-family: serif;
    opacity: 0.6;
}

.blurb {
    display: flex;
    justify-content: center;
    color: black;
    font-weight: bold;
    font-style: italic;
    flex-shrink: 3;
}

.blurb p {
    max-width: 400px;
    margin: 80px;
}

.meet {
    background-color: #663399;
}

.meet h1 {
    display: flex;
    justify-content: center;
}

.team-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.member img {
    width: 300px;
    height: 400px;
}

.member {
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 400px;
    height: 650px;
    padding: 20px;
}

.member p {
    max-width: 300px;
}

.member h3 {
    margin: 0;
    margin-top: 10px;
}

.blurb img {
    width: 400px;
}

#flip {
    transform: rotateY(180deg);
}

footer {
    background-color: #663399;
    display: flex;
    justify-content: space-between;
    padding: 30px;
    border-top: 1px solid #ccc;
}

.meet h1 {
    font-size: 2em;
    padding-top: 30px;
}

@media only screen and (max-width: 1200px) {
    .blurb img {
        display: none;
    }
}

@media only screen and (max-width: 700px) {
    header {
        justify-content: center;
        padding: 0;
    }

    nav a {
        display: none;
    }
}

@media only screen and (max-width: 540px) {
    .big-heading {
        font-size: 1em;
    }
}

@media only screen and (max-width: 400px) {
    .big-heading {
        font-size: 1em;
    }
}

@media only screen and (max-width: 360px) {
    .big-heading h1 {
        font-size: 1.3em;
    }
}

@media only screen and (max-width: 310px) {
    .big-heading {
        font-size: 0.9em;
    }
}

